<resources>
    <string name="app_name">YourGroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_title">save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="sure_text">Are you Sure?</string>
    <string name="no_n">No</string>
    <string name="yes_y">Yes</string>
</resources>
