<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/titlegroc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/groceryitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titlegroc"
                android:hint="@string/hint_item" />

            <EditText
                android:id="@+id/groceryQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/groceryitem"
                android:layout_marginTop="15dp"
                android:hint="@string/quantity_hint" />

            <Button
                android:id="@+id/savebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/groceryQty"
                android:layout_marginTop="5dp"
                android:background="#8657c5"
                android:text="@string/save_title"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>