<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <Button
                android:id="@+id/yesbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/nobutton"
                android:layout_alignParentRight="true"
                android:background="#8657c5"
                android:text="@string/yes_y"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/nobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAlert"
                android:layout_marginTop="19dp"
                android:background="#8657c5"
                android:text="@string/no_n"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/sure_text"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>